[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "cba_tools"
version = "0.1.0"
description = "Protein MD Simulation Setup Tools for CompBioAsia."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
license-files = ["LICENSE"]
keywords = [
    "compbioasia",
    "protein",
    "molecular dynamics",
    "simulation",
    "setup tools"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
authors = [
    {name = "Charlie Laughton", email = "charles.laughton@nottingham.ac.uk"}
    ]
dependencies = [
    "numpy",
    "matplotlib",
    "mdtraj",
    "rdkit",
]
[project.scripts]
loopfix = "cba_tools.cli_scripts:loopfix_cli"
param = "cba_tools.cli_scripts:param_cli"
make_refc = "cba_tools.cli_scripts:make_refc_cli"